<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">APIMateR</string>
    <string name="basic_preference_header">Initial Setup</string>
    <string name="advanced_preference_header">Advanced Preferences</string>
    <string name="appinfo_preference_header">App Information</string>
    <string name="prepare_title">Select dat directory</string>
    <string name="prepare_description">[Required] Select the dat directory and grant access.</string>
    <string name="open_default_title">Configure app links</string>
    <string name="open_default_description">[Required for Android 12 and above] Add 2ch.com, 5ch.com and bbspink.com from \"Add Link\".</string>
    <string name="revert_script_when_upgrade">Update scripts when upgrading</string>
    <string name="revert_script_when_upgrade_description">When you update APIMateR to a newer version, replace the following script with the latest version.</string>
    <string name="edit_translator_title">Edit translator script</string>
    <string name="edit_translator_description">Edit script for dat translation.</string>
    <string name="edit_viewer_title">Edit viewer script</string>
    <string name="edit_viewer_description">Edit script for screen transitions.</string>
    <string name="edit_preference_title">Edit preference script</string>
    <string name="edit_preference_description">Edit script to dat placement.</string>
    <string name="check_upgrade_startup_title">Check new version at startup</string>
    <string name="show_log">Show log file</string>
    <string name="oss_title">Open source licenses</string>
    <string name="version_title">Version</string>
    <string name="save_script">Save</string>
    <string name="revert_script">Revert to default</string>
    <string name="preset_script">Preset</string>
    <string name="save_script_succeeded">Saved</string>
    <string name="save_script_failed">Failed to save script</string>
    <string name="revert_script_succeeded">Reverted</string>
    <string name="revert_script_failed">Failed to revert script</string>
    <string name="script_preset_succeeded">Preset selected</string>
    <string name="translate_failed">Failed to execute script (translate)</string>
    <string name="view_failed">Failed to execute script (view)</string>
    <string name="prepare_create_failed">Failed to execute script (onCreateDatPreference)</string>
    <string name="prepare_click_failed">Failed to execute script (onClickDatPreference)</string>
    <string name="upgrade_channel_name">Upgrade notification</string>
    <string name="upgrade_channel_description">Notify when the new version app is available</string>
    <string name="upgrade_notification_text">Version %1$s available</string>
    <string name="script_preset_translator_900">[v0.9] api,dat,datkako,itest,html,sc</string>
    <string name="script_preset_translator_800">[v0.8] api,dat,itest,html,sc</string>
    <string name="script_preset_translator_700">[v0.7] api,itest,html,sc</string>
    <string name="script_preset_viewer_600">[v0.6.0] View via another thread</string>
    <string name="script_preset_viewer_400">[v0.4.0] View after terminating the process</string>
    <string name="script_preset_preference_400">[v0.4.0] First edition</string>
</resources>